# i2cuart

./: .gitignore  CMakeLists.txt
src/: i2cuart.c
